# utahotaru

./: .gitignore  CHANGELOG.md  README.md  README_DEV.md  RELEASING.md  build.py  build_all.py  config.json  dictionary.json  dist_current_freeze.txt  gen_sounds.py  main.py  network_dictionary.json  pyproject.toml  pytest.ini  requirements-variants.txt  requirements-winrt.txt  requirements.txt  singers.json
.github/workflows/: mac-build-smoke.yml  preview.yml  release.yml  test.yml
docs/: EMBEDDING.md  application.md  architecture.md  auto_update.md  domain.md  fixes_summary.md  infrastructure.md  timetag-spec-mapping.md  ui.md  更新日志-0.2.0.md
docs/manual/: calibration.html  export.html  faq.html  fulltext.html  furigana.html  getting-started.html  hotkeys.html  index.html  interface.html  settings.html  singers.html  timing.html
docs/manual/assets/: nav.js  style.css
docs/superpowers/plans/: 2026-06-20-cross-platform-01-shared-runtime.md  2026-06-20-cross-platform-02-audio-reading.md  2026-06-20-cross-platform-03-updates.md  2026-06-20-cross-platform-04-release.md  2026-06-20-cross-platform-plan-index.md
docs/superpowers/specs/: 2026-06-20-cross-platform-migration-design.md
packaging/linux/: build_appimage.sh  build_deb.sh  io.github.karaoke_studio.StrangeUtaGame.metainfo.xml  io.github.karaoke_studio.StrangeUtaGame.yml  strangeutagame.desktop
packaging/linux/debian/: control  postinst
packaging/macos/: sign_and_package.sh  verify_artifact.sh
packaging/windows/: StrangeUtaGame.iss  sign.ps1  verify.ps1
pyinstaller_hooks/: hook-sudachipy.py
scripts/: .runtime-hash-cache-mac.json  .runtime-hash-cache-noWinIME.json  .runtime-hash-cache.json  __init__.py  _sources.txt  apply_translations.py  audio_loopback_probe.py  build_zh_CN.py  check_platform_boundaries.py  extract_ts.py  find_tr_variable.py  find_unwrapped.py  find_unwrapped_infobar.py  generate_release_manifest.py  release.py  smoke_test_installed_app.py  translations_en_US.json  translations_ja_JP.json  verify_release_gate.py
scripts/release_tools/: __init__.py  targets.py
src/strange_uta_game/: __version__.py  app_dirs.py
src/strange_uta_game/backend/application/: __init__.py  auto_check_service.py  command_manager.py  export_service.py  project_import_service.py  singer_service.py  timing_service.py
src/strange_uta_game/backend/domain/: __init__.py  entities.py  models.py  project.py
src/strange_uta_game/backend/infrastructure/: __init__.py  network_dictionary.py
src/strange_uta_game/config/: config.json  dictionary.json  kanji_readings.json  singers.json  update-public-key.pem
src/strange_uta_game/frontend/: fluent_widgets.py  font_names.py  font_utils.py  main_window.py  perf_log.py  project_store.py  splash_screen.py  theme.py  window_sizing.py  winrt_japanese_guide.py  workers.py
src/strange_uta_game/frontend/editor/: fulltext_interface.py  line_interface.py  lyric_loader.py  timing_interface.py
src/strange_uta_game/frontend/export/: emoji_tag_dialog.py  export_interface.py
src/strange_uta_game/frontend/home/: home_interface.py
src/strange_uta_game/frontend/localization/: WORKFLOW.md  __init__.py  manager.py  retranslate.py
src/strange_uta_game/frontend/settings/: __init__.py  app_settings.py  calibration_dialog.py  cards.py  checkpoint_marker_dialog.py  dictionary_dialog.py  font_picker_dialog.py  network_dictionary_dialog.py  nicokara_dialog.py  pivot.py  preview_guide_dialog.py  settings_interface.py
src/strange_uta_game/frontend/singer/: singer_interface.py
src/strange_uta_game/resource/: icon.icns
src/strange_uta_game/resource/smoke/: legacy_v2.sug
src/strange_uta_game/runtime/: __init__.py  capabilities.py  context.py  migration.py  paths.py  platform_info.py  platform_theme.py  winrt.py
src/strange_uta_game/updater/: http_client.py  installer.py  manifest.py  model.py  service.py  signed_manifest.py  sources.py  worker.py
tests/fixtures/updater/: manifest-v2.json
tests/integration/: test_packaged_app.py
tests/unit/: test_embedded_contract.py  test_llm_ruby.py
tests/unit/application/: test_auto_check_dict_okurigana.py  test_auto_check_morpheme_protection.py  test_auto_check_numbers.py  test_auto_check_romaji.py  test_auto_check_service.py  test_singer_service.py  test_timing_service_on_key_changed.py
tests/unit/domain/: test_character_set_check_count.py  test_project.py  test_singer.py
tests/unit/frontend/: test_app_paths_integration.py  test_emoji_tag_dialog.py  test_fulltext_apply_timestamps.py  test_karaoke_preview_cache.py  test_localization.py  test_main_window_audio_factory.py  test_main_window_runtime.py  test_project_store_auto_save.py  test_project_store_export_dir.py  test_ruby_provider_entrypoints.py  test_settings_shortcut.py  test_timing_interface_seek.py  test_update_ui.py
tests/unit/infrastructure/: audio_fakes.py  conftest.py  test_ass_roundtrip.py  test_audio_diagnostics.py  test_audio_effects.py  test_audio_engine.py  test_audio_factory.py  test_audio_imports.py  test_audio_platform.py  test_audio_profile.py  test_exporters.py  test_inline_format.py  test_kanji_reading_split.py  test_lyric_parser.py  test_romaji.py  test_romanize_project_to_self_ruby.py  test_ruby_provider_chain.py  test_sounddevice_engine.py  test_sug_io.py  test_sug_io_complement_color.py  test_text_splitter.py  test_timed_annotated_text.py  test_tsm_cache.py
tests/unit/packaging/: test_build_config.py  test_linux_metadata.py  test_macos_metadata.py  test_project_metadata.py  test_release_gate.py  test_release_manifest_generation.py  test_targets.py  test_windows_installer.py  test_workflows.py
tests/unit/runtime/: __init__.py  test_capabilities.py  test_context.py  test_migration.py  test_paths.py  test_platform_boundaries.py
tests/unit/scripts/: test_audio_loopback_probe.py
tests/unit/updater/: test_handoffs.py  test_manifest.py  test_model.py  test_settings.py  test_signed_manifest.py  test_sources.py  test_update_service.py  test_update_signatures.py  test_worker_service.py
updater_app/: __init__.py  build_updater.py  gui.py  main.py
(+73 files in other folders)
