[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strange-uta-game"
version = "0.1.0"
description = "一款由 RhythmicaLyrics 启发的歌词打轴软件"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.9"
authors = [{ name = "StrangeUtaGame Team" }]
keywords = ["karaoke", "lyrics", "timing", "rhythmica", "subtitle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Text Processing :: Linguistic",
]

# 依赖真源不在此处。运行/开发依赖以锁定版本的 requirements*.txt 为准
# （requirements.txt + 按变体追加 requirements-winrt.txt / requirements-variants.txt，
# 开发工具见 requirements-dev.txt）。这些文件被 scripts/release.py 做内容哈希用于
# runtime 增量更新，改动需谨慎。
# pyproject.toml 在本项目仅承载工具配置（ruff/black/mypy/pytest），不参与打包安装
# （打包走 PyInstaller / build.py）。故此处不再维护一份会与 requirements 漂移的
# dependencies 列表。安装：pip install -r requirements.txt（或 uv pip install -r ...）。
dependencies = []

[project.scripts]
strange-uta-game = "strange_uta_game.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
strange_uta_game = ["resource/*", "bass/*.dll", "bass/x64/*.dll"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # Line too long (handled by black)
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "sounddevice",
    "soundfile",
    "pedalboard",
    "pedalboard.io",
    "numpy",
    "pykakasi",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
qt_api = "pyqt6"
addopts = ["--strict-markers", "--strict-config", "--verbose"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance tests",
]

[tool.coverage.run]
source = ["src/strange_uta_game"]
branch = true
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
